--- a/index.html
+++ b/index.html
@@ -325,54 +325,60 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<section>
 							<h4>Form</h4>
-							<form method="post" action="#">
-								<div class="row gtr-uniform">
-									<div class="col-6 col-12-xsmall">
-										<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-xsmall">
-										<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<select name="demo-category" id="demo-category">
-											<option value="">- Category -</option>
-											<option value="1">Manufacturing</option>
-											<option value="1">Shipping</option>
-											<option value="1">Administration</option>
-											<option value="1">Human Resources</option>
-										</select>
-									</div>
-									<div class="col-4 col-12-small">
-										<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-										<label for="demo-priority-low">Low</label>
-									</div>
-									<div class="col-4 col-12-small">
-										<input type="radio" id="demo-priority-normal" name="demo-priority">
-										<label for="demo-priority-normal">Normal</label>
-									</div>
-									<div class="col-4 col-12-small">
-										<input type="radio" id="demo-priority-high" name="demo-priority">
-										<label for="demo-priority-high">High</label>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="checkbox" id="demo-copy" name="demo-copy">
-										<label for="demo-copy">Email me a copy</label>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="checkbox" id="demo-human" name="demo-human" checked>
-										<label for="demo-human">Not a robot</label>
-									</div>
-									<div class="col-12">
-										<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</div>
-								</div>
+							<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+							  <div class="row gtr-uniform">
+							    <div class="col-6 col-12-xsmall">
+							      <input type="text" name="name" id="demo-name" placeholder="Name" required />
+							    </div>
+							    <div class="col-6 col-12-xsmall">
+							      <input type="email" name="email" id="demo-email" placeholder="Email" required />
+							    </div>
+							    <div class="col-12">
+							      <select name="category" id="demo-category" required>
+							        <option value="">- Category -</option>
+							        <option value="Manufacturing">Manufacturing</option>
+							        <option value="Shipping">Shipping</option>
+							        <option value="Administration">Administration</option>
+							        <option value="Human Resources">Human Resources</option>
+							      </select>
+							    </div>
+							    <div class="col-4 col-12-small">
+							      <input type="radio" id="priority-low" name="priority" value="Low" checked />
+							      <label for="priority-low">Low</label>
+							    </div>
+							    <div class="col-4 col-12-small">
+							      <input type="radio" id="priority-normal" name="priority" value="Normal" />
+							      <label for="priority-normal">Normal</label>
+							    </div>
+							    <div class="col-4 col-12-small">
+							      <input type="radio" id="priority-high" name="priority" value="High" />
+							      <label for="priority-high">High</label>
+							    </div>
+							    <div class="col-6 col-12-small">
+							      <input type="checkbox" id="copy" name="copy" />
+							      <label for="copy">Email me a copy</label>
+							    </div>
+							    <div class="col-6 col-12-small">
+							      <input type="checkbox" id="human" name="human" checked />
+							      <label for="human">Not a robot</label>
+							    </div>
+							    <div class="col-12">
+							      <textarea name="message" id="demo-message" placeholder="Enter your message" rows="6" required></textarea>
+							    </div>
+							    <input type="hidden" name="form-name" value="contact" />
+								<p class="hidden">
+								  <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+								</p>
+
+							    <div class="col-12">
+							      <ul class="actions">
+							        <li><input type="submit" value="Send Message" class="primary" /></li>
+							        <li><input type="reset" value="Reset" /></li>
+							      </ul>
+							    </div>
+							  </div>
 							</form>
+
 						</section>
 
 						<section>
