--- a/index.html
+++ b/index.html
@@ -415,18 +415,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<form method="post" action="#">
-						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-								</ul>
-							</div>
-						</div>
+					<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+					  <input type="hidden" name="form-name" value="contact">
+					  <p class="hidden">
+					    <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+					  </p>
+					  <div class="row gtr-uniform">
+					    <div class="col-6 col-12-xsmall">
+					      <input type="text" name="name" id="name" placeholder="Name" required>
+					    </div>
+					    <div class="col-6 col-12-xsmall">
+					      <input type="email" name="email" id="email" placeholder="Email" required>
+					    </div>
+					    <div class="col-12">
+					      <textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
+					    </div>
+					    <div class="col-12">
+					      <ul class="actions special">
+					        <li><input type="submit" value="Send Message" class="primary"></li>
+					      </ul>
+					    </div>
+					  </div>
 					</form>
+
 				</div>
 				<footer>
 					<ul class="icons">
