--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</header>
 					<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
 					  <input type="hidden" name="form-name" value="contact">
-					  <p class="hidden">
+					  <p hidden>
 					    <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
 					  </p>
 					  <div class="row gtr-uniform">
