--- a/index.html
+++ b/index.html
@@ -417,9 +417,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</header>
 					<form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
 					  <input type="hidden" name="form-name" value="contact">
-					  <p hidden>
-					    <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-					  </p>
+					  <p hidden><label>Don’t fill this out if you're human: <input name="bot-field" /></label></p>
 					  <div class="row gtr-uniform">
 					    <div class="col-6 col-12-xsmall">
 					      <input type="text" name="name" id="name" placeholder="Name" required>
